Fix: Fix style issue that is extending page width, Add prop-type
- Fix style issue that overflows page width in board page
- Add prop-type decleration for App Component

--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -5,17 +5,21 @@
 
 .board-title-container {
   flex: 0 0 100%;
-  margin: 10px;
   color: #e3dce6;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.board-title {
+  padding-left: 20px;
 }
 
 .delete-board-btn {
-  padding: 5px 10px 5px 10px;
+  padding: 5px 20px 0px 0px;
   border-radius: 3px;
   color: #e3dce6;
   border: none;
   float: right;
-  margin-right: 20px;
   background: none;
 }
 
